--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -322,7 +322,7 @@ ul{
 .image{
 	padding-top: 5px;
 	padding-bottom: 5px;
-	width: 100%;
+	width: 50%;
 }
 .white-logo-contain{
 	width: 230px;
@@ -582,6 +582,30 @@ body {
 
 }
 
+.btn.aqua-gradient {
+	transition: .5s ease;
+	color: #fff;
+}
+
+.btn.btn-sm {
+	padding: .5rem 1.6rem;
+	font-size: .64rem;
+}
+
+.aqua-gradient {
+	background: linear-gradient(40deg,#2096ff,#05ffa3)!important;
+}
+
+.btn-group-sm>.btn, .btn-sm {
+	padding: .25rem .5rem;
+	font-size: .875rem;
+	line-height: 1.5;
+	border-radius: .2rem;
+}
+
+.btn-rounded {
+	border-radius: 10em;
+}
 
 
 
