--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -367,7 +367,7 @@ ul{
 	width: 50%;
 }
 .height100{
-	height: 100%;
+	height: 100% !important;
 }
 .avatar-menu-size{
 	height: 100%;
@@ -492,6 +492,10 @@ ul{
 .small-avatar-circle-width{
 	width: 40px;
 	height: 40px;
+}
+.post-avatar-circle-width{
+	width: 50px;
+	height: 50px;
 }
 .small-avatar-circle{
 	border-radius: 50%;
@@ -766,5 +770,10 @@ body {
 
 .width80 {
 	width: 80%;
+}
+
+.avatar {
+	width: 50px;
+	height: 50px;
 }
 /*Конец стилей Алихана*/
