--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -767,4 +767,16 @@ body {
 .width80 {
 	width: 80%;
 }
+
+.image-circle-add-post{
+	width: 70px;
+	border-radius: 50%;
+	height: 70px;
+	margin-left: 0!important;
+}
+
+.header-avatar-size{
+	width: 40px;
+	height: 45px;
+}
 /*Конец стилей Алихана*/
