--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,64 @@
-//
+$color-4: #573a76;
+$color-3: #81365c;
+$color-2: #b63545;
+$color-1: #e93126;
+$color-5: #363d8a;
+
+$color: $color-1, $color-2, $color-3, $color-4, $color-5;
+
+@mixin anim() {
+  @keyframes scale {
+    0% {
+      transform: scale(1);
+    }
+    50%,
+    75% {
+      transform: scale(2.5);
+    }
+    78%, 100% {
+      opacity: 0;
+    }
+  }
+}
+
+.preloader {
+  z-index: 1001;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  overflow: hidden;
+  animation-delay: 1s;
+  background: #00dcff4d;
+  opacity: 0.8;
+}
+
+@for $i from 1 through 5 {
+  .item-#{$i} {
+    width: 20px;
+    height: 20px;
+    background: #f583a1;
+    border-radius: 50%;
+    @include anim();
+    background-color: nth($color, $i);
+    margin: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &:before {
+      content: '';
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background-color: nth($color, $i);
+      opacity: 0.7;
+      animation: scale 2s infinite cubic-bezier(0, 0, 0.49, 1.02);
+      animation-delay: 200ms * $i;
+      transition: 0.5s all ease;
+      transform: scale(1);
+    }
+  }
+}
