--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -346,19 +346,24 @@ ul{
 .header-img-width{
 	width: 6rem;
 }
-.header-section{
+.header-section {
 	display: none;
 	position: absolute;
 	margin-top: 3rem;
 	width: 100%;
-	border: 1px solid black;
+	/*border: 1px solid black;*/
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 .header-section section{
 	width: 100%;
 }
 .header-section option{
 	background: #4974cc;
+    color: #FFF;
 	width: 100%;
+}
+.header-section option:hover{
+    background: #4267b2;
 }
 .header-menu-hover:hover + .header-section{
 	display: block;
@@ -366,6 +371,16 @@ ul{
 .header-section:hover{
 	display: block;
 }
+
+.header-navigation {
+    transition: 0.4s ease;
+}
+
+.header-navigation:hover {
+    background-color: #4974cc;
+    transition: 0.4s ease;
+}
+
 .white-logo-contain{
 	width: 230px;
 }
@@ -398,6 +413,7 @@ ul{
 	background: #4974cc;
 	border-radius: 10px;
 }
+
 .header-avatar-nickname{
 	color: white;
 }
