--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,6 +13,71 @@ ul{
 .bg-color-blue{
 	background: #4267b2;
 }
+.mobile-centras-logo{
+	width: 4.5rem;
+}
+.mobile-link-padding{
+	padding: 0.3rem;
+}
+.width-40{
+	width: 40%;
+}
+.color-blue-name{
+	color: #4c70b6;
+}
+.border-rad-10{
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+}
+.bg-notification-center{
+	background-color: #1462ff;
+}
+.color-dimgray{
+	color: dimgray;
+}
+.modal-blur{
+	filter: blur(5px);
+}
+.modal-margin{
+	margin-top: 100px !important;
+}
+.notification-counter{
+	top: 18.8rem;
+	left: 83px;
+	padding: 0px 4px;
+	border: 2px solid #4a76a8;
+	border-radius: 12px;
+	color: #fff;
+	font-size: 8px;
+	background-color: #ff734c;
+	text-align: center;
+	position: absolute;
+	z-index: 1;
+}
+.mobile-date-flex{
+	display: flex;
+	flex-flow: column;
+}
+.modal-footer{
+	border-top: 0;
+}
+/*@media (min-width: 400px){*/
+/*	.mobile-date-flex{*/
+/*		flex-flow: row;*/
+/*		justify-content: space-between;*/
+/*		align-items: center;*/
+/*	}*/
+/*	.mobile-date-width{*/
+/*		width: 50%;*/
+/*	}*/
+/*	.mobile-dossier-fio-input{*/
+/*		margin-bottom: 0.9rem;*/
+/*	}*/
+/*}*/
+.mobile-date-contain{
+	margin-top: 1rem;
+}
 .min-height-240{
 	min-height: 240px;
 }
@@ -21,6 +86,9 @@ ul{
 }
 .min-width50{
 	min-width: 150px !important;
+}
+.min-width-50{
+	min-width: 50%;
 }
 .min-width46{
 	min-width: 46%;
@@ -276,6 +344,12 @@ ul{
 .fs-3{
 	font-size: 3rem;
 }
+.fs-4{
+	font-size: 4rem !important;
+}
+.pt-13{
+	padding-top: 13rem !important;
+}
 .button-cancel{
 	background: #c10b0b;
 }
@@ -283,6 +357,12 @@ ul{
 	background: transparent;
 	color: #508ff4;
 	border: 1px solid #508ff4;
+}
+.matching-border{
+	border-bottom: 2px solid #5680d3;
+}
+.matching-note-border{
+	border-bottom: 10px solid #275cc7;
 }
 .test{
     margin: 0 1.5rem;
@@ -572,6 +652,16 @@ ul{
 	display: flex;
 	justify-content: space-between;
 }
+.border-rad-20{
+	border-radius: 20px !important;
+}
+.border-top-rad-20{
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+}
+.border-top-0{
+	border-top: 0;
+}
 .jc-sa{
 	display: flex;
 	justify-content: space-around;
@@ -653,6 +743,12 @@ ul{
 }
 .bg-blue-standart{
 	background: #275cc7;
+}
+.relative{
+	position: relative;
+}
+.absolute{
+	position: absolute;
 }
 .color-blue-standart{
 	color: #275cc7;
@@ -988,3 +1084,125 @@ body {
 
 
 /*Конец стилей Алихана*/
+/*Mobile*/
+.mobile-bg-position{
+	background-position-x: -315px;
+	/*background-position-y: -148px;*/
+}
+.mobile-input{
+	max-width: 100% !important;
+	width: 100%;
+	background: hsla(227,46%,49%,.7);
+	border-radius: 14px;
+	border: 1px solid hsla(227,46%,49%,.7);
+}
+.mobile-button-login{
+	border-radius: 60px;
+}
+.mobile-input:focus{
+	outline: hsla(227,46%,49%,.7);
+}
+.mobile-input-password{
+	border-top-left-radius: 14px;
+	border-bottom-left-radius: 14px;
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
+}
+.mobile-input-login::-webkit-input-placeholder{
+	color: #fff;
+}
+.mobile-input-password::-webkit-input-placeholder{
+	color: #73a7d4;
+}
+.mobile-input-password-icon{
+	background: hsla(227,46%,49%,.7);
+	border-radius: 0 14px 14px 0;
+	border-left: 0;
+	border-top: 1px solid hsla(227,46%,49%,.7);
+	border-right: 1px solid hsla(227,46%,49%,.7);
+	border-bottom: 1px solid hsla(227,46%,49%,.7);
+}
+.mobile-social-icons{
+	font-size: 1.8rem;
+}
+.mobile-main-height{
+	height: 100vh;
+}
+.mobile-input-icons{
+	left: 8.7em !important;
+}
+.ml-5_5em{
+	margin-left: 5.5em;
+}
+.mobile-social-contain{
+	margin-top: 10rem;
+}
+.mobile-main-contain{
+	padding-top: 2rem;
+}
+@media (max-width: 350px){
+	.mobile-social-contain{
+		margin-top: 0 !important;
+	}
+	.mobile-main-contain{
+		padding-top: 2rem !important;
+	}
+}
+.chart-mainData-attributes{
+	margin: 0.5rem 0;
+}
+.chart-mainData-attributes-contain{
+	margin-left: -100px;
+	z-index: 50;
+}
+.main-data-chart-contains{
+	display: flex;
+	flex-flow: row;
+}
+.main-data-chart-contains-size{
+	/*width: 50%;*/
+}
+.data-chart-pie{
+	width: 100% !important;
+}
+.data-chart-bar{
+	width: 100% !important;
+}
+.main-data-border{
+	border-right: 1px solid black;
+}
+.main-data-border-left{
+	border-left: 1px solid black;
+}
+@media (max-width: 1800px){
+	.main-data-chart-contains{
+		flex-flow: column;
+	}
+	.main-data-chart-contains-size{
+		width: 100%;
+	}
+	.data-chart-pie{
+		width: 500px !important;
+		padding-left: 120px;
+	}
+	.main-data-border{
+		border-right: 0;
+		border-bottom: 1px solid black;
+		padding-bottom: 2rem;
+	}
+	.main-data-border-left{
+		border-left: 0;
+		border-bottom: 1px solid black;
+		padding-bottom: 2rem;
+	}
+	.data-chart-bar{
+		padding-top: 1rem;
+		width: 700px !important;
+		padding-left: 20px;
+	}
+}
+/*Стилизация плейсхолдеров, перед псевдоклассом надо поставить имя класса инпута*/
+/*::-webkit-input-placeholder {color:#fff;}*/
+/*::-moz-placeholder          {color:#fff;}!* Firefox 19+ *!*/
+/*:-moz-placeholder           {color:#fff;}!* Firefox 18- *!*/
+/*:-ms-input-placeholder      {color:#fff;}*/
