--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -453,6 +453,7 @@ ul{
 	position: absolute;
 	margin-top: 3rem;
 	width: 100%;
+    z-index: 1000;
 	/*border: 1px solid black;*/
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
