Store items Coordination label Redirect route to news Remove show more button Added text when no coordination lists

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1355,6 +1355,12 @@ body {
 	flex-flow: column;
 	align-items: center;
 }
+
+.coordination-none-text{
+	font-weight: bold;
+	text-align: center;
+	font-size: x-large;
+}
 /*Стилизация плейсхолдеров, перед псевдоклассом надо поставить имя класса инпута*/
 /*::-webkit-input-placeholder {color:#fff;}*/
 /*::-moz-placeholder          {color:#fff;}!* Firefox 19+ *!*/
