--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,4 @@
+/* Global styles */
 body{
 	margin: 0;
 	padding: 0;
@@ -9,6 +10,9 @@ ul{
 	list-style: none;
 	margin: 0 !important;
 	padding: 0;
+}
+pre {
+
 }
 .bg-color-blue{
 	background: #4267b2;
@@ -62,19 +66,7 @@ ul{
 .modal-footer{
 	border-top: 0;
 }
-/*@media (min-width: 400px){*/
-/*	.mobile-date-flex{*/
-/*		flex-flow: row;*/
-/*		justify-content: space-between;*/
-/*		align-items: center;*/
-/*	}*/
-/*	.mobile-date-width{*/
-/*		width: 50%;*/
-/*	}*/
-/*	.mobile-dossier-fio-input{*/
-/*		margin-bottom: 0.9rem;*/
-/*	}*/
-/*}*/
+
 .mobile-date-contain{
 	margin-top: 1rem;
 }
