--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1413,6 +1413,15 @@ body {
 .show-all-btn:hover {
 	color: cornflowerblue;
 }
+
+.show-btn {
+    transition: 0.4s ease;
+    cursor: pointer;
+}
+.show-btn:hover {
+    color: #000;
+    border-color: #000;
+}
 /*Стилизация плейсхолдеров, перед псевдоклассом надо поставить имя класса инпута*/
 /*::-webkit-input-placeholder {color:#fff;}*/
 /*::-moz-placeholder          {color:#fff;}!* Firefox 19+ *!*/
