--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,6 +28,9 @@ ul{
 .mobile-link-padding{
 	padding: 0.3rem;
 }
+.friends-settings{
+	background: #e4edff !important;
+}
 .width-40{
 	width: 40%;
 }
@@ -318,6 +321,9 @@ ul{
 .button-accept{
 	background: #508ff4;
 }
+.fit{
+	width: fit-content;
+}
 .bg-parse{
 	background: #eaeff3;
 }
@@ -432,6 +438,78 @@ ul{
 }
 .matching-border{
 	border-bottom: 2px solid #5680d3;
+}
+.colleagues-input-contain{
+	border-bottom: 1px solid gray;
+	width: fit-content;
+	width: -moz-fit-content;
+}
+/*SHOW HIDE ANIMATION*/
+.slideDown{
+	margin: auto auto 0;
+}
+.slideDown:active{
+	animation-name: slideDown;
+	-webkit-animation-name: slideDown;
+
+	animation-duration: 1s;
+	-webkit-animation-duration: 1s;
+
+	animation-timing-function: ease;
+	-webkit-animation-timing-function: ease;
+
+	visibility: visible !important;
+}
+
+@keyframes slideDown {
+	0% {
+		transform: translateY(-500%);
+	}
+	50%{
+		transform: translateY(8%);
+	}
+	65%{
+		transform: translateY(-4%);
+	}
+	80%{
+		transform: translateY(4%);
+	}
+	95%{
+		transform: translateY(-2%);
+	}
+	100% {
+		transform: translateY(0%);
+	}
+}
+
+@-webkit-keyframes slideDown {
+	0% {
+		-webkit-transform: translateY(-100%);
+	}
+	50%{
+		-webkit-transform: translateY(8%);
+	}
+	65%{
+		-webkit-transform: translateY(-4%);
+	}
+	80%{
+		-webkit-transform: translateY(4%);
+	}
+	95%{
+		-webkit-transform: translateY(-2%);
+	}
+	100% {
+		-webkit-transform: translateY(0%);
+	}
+}
+.colleagues-select{
+	border: 1px solid #88a1d3;
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	border-radius: 8px;
+}
+.border-8{
+	border-radius: 8px;
 }
 .matching-underline{
 	text-decoration: underline #508ff4;
