--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -450,47 +450,6 @@ ul{
 	visibility: visible !important;
 }
 
-@keyframes slideDown {
-	0% {
-		transform: translateY(-500%);
-	}
-	50%{
-		transform: translateY(8%);
-	}
-	65%{
-		transform: translateY(-4%);
-	}
-	80%{
-		transform: translateY(4%);
-	}
-	95%{
-		transform: translateY(-2%);
-	}
-	100% {
-		transform: translateY(0%);
-	}
-}
-
-@-webkit-keyframes slideDown {
-	0% {
-		-webkit-transform: translateY(-100%);
-	}
-	50%{
-		-webkit-transform: translateY(8%);
-	}
-	65%{
-		-webkit-transform: translateY(-4%);
-	}
-	80%{
-		-webkit-transform: translateY(4%);
-	}
-	95%{
-		-webkit-transform: translateY(-2%);
-	}
-	100% {
-		-webkit-transform: translateY(0%);
-	}
-}
 .colleagues-select{
 	border: 1px solid #88a1d3;
 	-webkit-border-radius: 8px;
@@ -1109,6 +1068,7 @@ body {
     font-family: 'Roboto Condensed', sans-serif;
     margin: 0;
     padding: 0;
+	min-height: 100vh;
 }
 
 .container-fluid {
@@ -1835,4 +1795,8 @@ textarea::-webkit-scrollbar-thumb {
 .colleagues-section__body {
     display: grid;
     grid-template-columns: auto auto;
+}
+
+.vw90{
+	width: 90vw;
 }
