--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1794,6 +1794,9 @@ textarea::-webkit-scrollbar-thumb {
 .last-tab{
 	border-radius: 0 6px 0 0;
 }
+.min-height-15{
+    min-height: 15px;
+}
 
 .colleagues-section__header__nav span {
     position: absolute;
