--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1826,3 +1826,15 @@ textarea::-webkit-scrollbar-thumb {
 	right: 50px;
 	bottom: 50px;
 }
+
+.parse-info{
+	text-align: right;
+	width: 100%;
+	color: gray;
+	margin-right: 55px;
+}
+
+.ny-2020 {
+	background: url(https://niagarastar.ru/niagara8/img8/ng-gyr.png) repeat-x;
+	height: 100px;
+}
