news feed update

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1533,6 +1533,9 @@ body {
 
 .show-all-btn {
 	cursor: pointer;
+    outline: none;
+    border: none;
+    background: transparent;
 	transition: 0.4s ease;
 }
 
