--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1934,3 +1934,40 @@ textarea::-webkit-scrollbar-thumb {
 .relative{
 	position: relative;
 }
+.Birthday-line_height{
+	line-height: 0.8rem;
+}
+.Birthday-line_height-header{
+	line-height: 1.1rem;
+}
+.Birthday-margin-inner:not(:first-child){
+	padding: 0.5rem 0;
+}
+.Birthday-line_height{
+	line-height: 0.9rem;
+}
+.Birthday-line_height-header{
+	line-height: 1.2rem;
+}
+.Birthday-margin-inner:not(:first-child){
+	padding: 0.5rem 0;
+}
+@media (min-width: 1500px){
+	.col-md-2-sm-3-lg{
+		-webkit-box-flex: 0;
+		-ms-flex: 0 0 16.666667%;
+		flex: 0 0 16.666667%;
+		max-width: 16.666667%;
+	}
+}
+@media (max-width: 1499px){
+	.col-md-2-sm-3-lg{
+		-webkit-box-flex: 0;
+		-ms-flex: 0 0 25%;
+		flex: 0 0 25%;
+		max-width: 25%;
+	}
+}
+.hover-gray:hover{
+	color: gray;
+}
