--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -165,7 +165,7 @@ $light-off-opacity: 0.4;
   z-index: 10000;
 
   .tooltip-inner {
-    background: black;
+    background: #4267b2;
     color: white;
     border-radius: 16px;
     padding: 5px 10px 4px;
@@ -177,7 +177,7 @@ $light-off-opacity: 0.4;
     border-style: solid;
     position: absolute;
     margin: 5px;
-    border-color: black;
+    border-color: #4267b2;
   }
 
   &[x-placement^="top"] {
