--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1934,3 +1934,35 @@ textarea::-webkit-scrollbar-thumb {
 .relative{
 	position: relative;
 }
+
+.custom-primary-button {
+    color: #508ff4;
+    border: 1px solid #508ff4;
+    background-color:transparent;
+    border-radius: 5px;
+    transition: all 0.4s ease;
+}
+
+.custom-primary-button:hover {
+    background-color: #508ff4;
+    color: #FFF;
+    box-shadow: 0 0 12px 0 rgba(80, 143, 244, 0.3);
+}
+
+.bg-grayblue {
+    background-color: #eaeff3;
+}
+
+.color-light-gray {
+    color: #818181;
+}
+
+.custom-primary-button-inverse {
+    background-color: #508ff4;
+    color: #FFF;
+    transition: all 0.4s ease;
+}
+
+.custom-primary-button-inverse:hover {
+    box-shadow: 0 0 12px 0 rgba(80, 143, 244, 0.3);
+}
